# macdive-toolbox

./: .gitignore  Cargo.toml  README.md  diesel.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: config.rs  db.rs  domain.rs  error.rs  lib.rs
core/src/macdive/: queries.rs
core/src/parsers/: mod.rs  species.rs
core/src/services/: geocoding.rs  mod.rs
core/src/services/globalnames/: cache.rs  client.rs  mod.rs
core/src/services/inaturalist/: cache.rs  client.rs  mod.rs  types.rs
core/src/services/lightroom/: io.rs  mod.rs  preset.rs
core/src/services/mtp/: device.rs  files.rs  mod.rs
core/src/util/: fs.rs  mod.rs  rate_limit.rs
entity/: Cargo.toml
entity/src/: critter.rs  critter_category.rs  dive_site.rs  lib.rs  prelude.rs  taxon_cache.rs  verified_name.rs
examples/: config.yaml  locations.toml  overrides.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230320_162727_inaturalist_cache.rs
src/: arguments.rs  commands.rs  errors.rs  geocode.rs  lightroom.rs  main.rs  types.rs
src/commands/: critters.rs  lightroom.rs  mod.rs  mtp.rs
src/helpers/: fs.rs  mod.rs  progress.rs
src/helpers/mtp/: types.rs
src/helpers/mtp/utils/: detect.rs  filetree.rs  mod.rs
src/inaturalist/: helpers.rs  mod.rs  types.rs
src/inaturalist/types/: models.rs
src/macdive/: mod.rs  models.rs  schema.rs  types.rs
src/parsers/: species.rs
toolbox/: Cargo.toml
toolbox/.github/workflows/: ci.yml
toolbox/examples/: overrides.yaml
toolbox/src/: arguments.rs  cli.rs  errors.rs  main.rs  progress.rs  types.rs
toolbox/src/commands/: critters.rs  lightroom.rs  mtp.rs
toolbox/src/helpers/: database.rs  fs.rs  geocode.rs  globalnames.rs  lightroom.rs  mod.rs  progress.rs
toolbox/src/helpers/mtp/: mod.rs  types.rs
toolbox/src/helpers/mtp/utils/: detect.rs  filetree.rs
toolbox/src/inaturalist/: helpers.rs  mod.rs  types.rs
toolbox/src/inaturalist/types/: api.rs
toolbox/src/macdive/: models.rs  types.rs
toolbox/src/parsers/: mod.rs  species.rs
toolbox/templates/: metadata_preset.lrtemplate
