[package]
name = "macdive-exporter"
version = "0.1.0"
authors = ["Morton Jonuschat <mjonuschat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
askama = "0.10.5"
celes = "1.0.6"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
console = "0.14.1"
diesel = { version = "1.4.6", features = ["sqlite", "chrono", "uuidv07"] }
dirs = "3.0.1"
google_maps = "1.0.3"
indicatif = "0.15.0"
once_cell = "1.7.2"
prettytable-rs = "0.8.0"
regex = "1.4.5"
rust_decimal = "1.9.0"
rust_decimal_macros = "1.9.0"
thiserror = "1.0.24"
uuid = "0.8.2"
walkdir = "2.3.2"