[package]
name = "macdive-exporter"
version = "0.1.0"
authors = ["Morton Jonuschat <mjonuschat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
askama = "0.10.5"
async-trait = "0.1.50"
celes = "1.0.6"
change-case = "0.2.0"
chrono = "0.4.19"
clap = { version = "3.0.0", features = [ "derive" ] }
console = "0.14.1"
dirs = "3.0.1"
futures = "0.3.16"
geo = "0.17.1"
google_maps = "2.1.3"
governor = "0.3.2"
indicatif = "0.15.0"
itertools = "0.10.1"
maplit = "1.0.2"
nonzero_ext = "0.2.0"
once_cell = "1.7.2"
comfy-table = "6.0.0-rc.1"
regex = "1.4.5"
rmp-serde = "0.15.5"
rust_decimal = "1.9.0"
rust_decimal_macros = "1.9.0"
serde = {version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
serde_yaml = "0.8.20"
sled = "0.34.6"
surf = "2.2.0"
sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-native-tls", "uuid", "json", "chrono" ] }
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
walkdir = "2.3.2"