[package]
name = "macdive-exporter"
version = "0.1.0"
authors = ["Morton Jonuschat <mjonuschat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
askama = "0.12.0"
async-trait = "0.1.50"
bytefmt = "0.1.7"
celes = "2.4.0"
change-case = "0.2.0"
chrono = "0.4.19"
clap = { version = "4.1.8", features = [ "derive" ] }
console = "0.15.5"
dirs = "4.0.0"
futures = "0.3.16"
geo = "0.24.0"
google_maps = "3.1.1"
governor = "0.5.1"
indicatif = "0.17.3"
itertools = "0.10.1"
libmtp-rs = { version = "0.7.7", git = "https://github.com/quebin31/libmtp-rs.git" }
maplit = "1.0.2"
nonzero_ext = "0.3.0"
once_cell = "1.7.2"
comfy-table = "6.0.0-rc.1"
ptree = "0.4.0"
regex = "1.4.5"
rmp-serde = "1.1.1"
rust_decimal = "1.9.0"
rust_decimal_macros = "1.9.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
serde_yaml = "0.9.19"
sled = "0.34.6"
surf = "2.2.0"
sqlx = { version = "0.6.2", features = [ "sqlite", "runtime-tokio-native-tls", "uuid", "json", "chrono" ] }
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
walkdir = "2.3.2"
xml_serde = "1.4.1"
csv = "1.2.1"
nom = "7.1.3"
tracing-indicatif = "0.3.0"
