[package]
name = "macdive-toolbox-core"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "1.0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
celes = "2.4.0"
change-case = "0.2.0"
chrono = "0.4.19"
geo = { version = "0.32.0", features = ["serde"] }
google_maps = "3.1.1"
governor = "0.10.0"
nom = "8.0.0"
nonzero_ext = "0.3.0"
rust_decimal = "1.9.0"
rust_decimal_macros = "1.9.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
