[package]
name = "macdive-toolbox-core"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "1.0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
askama = "0.15.0"
celes = "2.4.0"
change-case = "0.2.0"
chrono = "0.4.19"
google_maps = "3.1.1"
governor = "0.10.0"
nom = "8.0.0"
nonzero_ext = "0.3.0"
regex = "1.4.5"
rust_decimal = "1.9.0"
rust_decimal_macros = "1.9.0"
serde = { version = "1.0.126", features = ["derive"] }
serde-saphyr = "0.0.22"
itertools = "0.14.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
walkdir = "2.3.2"
bytefmt = "0.1.7"
indicatif = "0.18.0"
mtp-rs = "0.4"
ptree = "0.5.0"
