[package]
name = "macdive-toolbox"
version = "0.1.0"
authors = ["Morton Jonuschat <mjonuschat@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.50"
bytefmt = "0.1.7"
celes = "2.4.0"
change-case = "0.2.0"
clap = { version = "4.1.8", features = ["derive"] }
comfy-table = "7.1.0"
console = "0.16.0"
csv = "1.2.1"
dirs = "5.0.1"
entity = { path = "../entity" }
futures = "0.3.16"
indicatif = "0.18.0"
macdive-toolbox-core = { path = "../core" }
migration = { path = "../migration" }
sea-orm = { version = "1.0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-indicatif = "0.3.0"
tracing-subscriber = "0.3"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
quick-xml = { version = "0.37", features = ["serialize"] }
